# lorem

./: .travis.yml  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  index.html  lorem.c  lorem.h  params.json
stylesheets/: stylesheet.css
tests/: file_tests.sh  reset.sh  so_tests.sh  start_tests.sh
tests/results/: f_results.txt  so_results.txt
tests/text_files/: eg2.txt  eg3.txt
