#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([lorem], [0.2.0], [git.simpkins@gmail.com], [lorem])
AM_INIT_AUTOMAKE([1.10 no-define -Wall foreign])
AM_CFLAGS=-g -Wall -03
AC_CONFIG_SRCDIR([lorem.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC_C99

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
